--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+  @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+  *{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Outfit', sans-serif;
+  }
+  body{
+    background: #000;
+  }
+  h1,h4,p,a{
+    color: #fff;
+    text-decoration: none;
+  }
+  ul{
+    list-style-type: none;
+  }
+ .btn{
+      padding: 10px 30px;
+      font-size: 1rem;
+      text-transform: uppercase;
+      background: rgb(203, 178, 12);
+      color: #222;
+      border: 1px solid #fff;
+      font-weight: 600;
+      cursor: pointer;
+      
+      
+  }
+  .btn-light{
+    padding: 10px 30px;
+      font-size: 1rem;
+      text-transform: uppercase;
+    
+    background: transparent;
+    color: #fff;
+    border: 1px solid #fff;
+    font-weight: 600;
+    cursor: pointer;
+  }
+  .btn:hover{
+    background: rgba(255, 255, 255, 0.2);
+    color: #fff;
+    transition: 0.3s;
+  }
+  .btn-light:hover{
+    background: rgba(255, 255, 255, 0.2);
+    color: #fff;
+    transition: 0.3s;
+  }
